	* libgpukernel: assignment of 1D/3D thread IDs and work sizes.
	* libgpumachine: LDS implementation

2010-12-22
	* libgpukernel: control-flow

2010-12-23
	* libgpukernel: more control flow

2010-12-23
	* libgpukernel: restructure. Warps created.

2010-12-26
	* libm2skernel/machine-fp.c: BUG FIXED in machine instructions FCOMI, FCOMIP, FUCOMI,
		FUCOMIP. These instructions exceptionally modify the integer flags. This
		detail was not taken into account, and they were modeled as if they modified
		the floating-point status register.

2010-12-27
	* libgpukernel/opencl-obj.c: improved analysis of ELF kernel binaries based on
		the symbols contained in the main symbol table.

2010-12-31
	* libgpukernel/cal-abi.c: new analysis of the secondary ELF kernel binary based on the
		new information released by AMD.

2011-01-05
	* libgpukernel/cal-abi.c, opencl-obj.c: updated to use the new management of ELF files.
	* libgpukernel/opencl.c: added a 4th parameter to the clGetPlatformIDs both in the
		libm2s-opencl.so library and in the OpenCL system call interpreter to pass the
		library implementation version. This forces the user to always have the latest
		update for the library.

2010-01-12
	* libgpukernel/cal-abi.c: constants for ELF_NOTE_ATI_XXX added as per AMD's notification.
	* Version 2.4.2 Released

2010-01-12
	* libgpukernel/cal-abi.c: debug info for pt_note entries.

2010-01-15
	* libgpukernel/gpumachine.c, libgpudisasm/gpudisasm.dat: new instructions implemented.
		Support provided for MatrixMultiplication kernel, both using global and
		local memory.
	* libgpukernel/gpuisa.c: Initialization of CB[0] as specified by the information provided
		by AMD.

2010-01-20
	* tools/libm2s-opencl: Directory containing the Multi2Sim OpenCL library.
	* tools/m2s-opencl-kc: OpenCL Kernel Compiler. Based on the CAL interface, the tool
		takes an OpenCL kernel as an input and compiles it for any target device supported
		by the OpenCL driver. It requires the AMD SDK installed.
